add fluent generic endpoint support to cli tool
